--- a/lists/templates/lists/home.html
+++ b/lists/templates/lists/home.html
@@ -1,3 +1,14 @@
 <html>
-    <title>To-Do lists</title>
+    <head>
+       <title>To-Do lists</title>
+       <meta charset="utf-8" />
+    </head>
+    <body>
+       <h1>Your To-Do list</h1>
+       <input id="id_new_item" type="text"
+              placeholder="Enter a to-do item"/>
+       <table id="id_list_table">
+        
+       </table>
+    </body>
 </html>
