--- a/lists/templates/lists/home.html
+++ b/lists/templates/lists/home.html
@@ -5,10 +5,17 @@
     </head>
     <body>
        <h1>Your To-Do list</h1>
-       <input id="id_new_item" type="text"
-              placeholder="Enter a to-do item"/>
+       <form method="POST" action="">
+            {% csrf_token %}
+            <input name="item_text" id="id_new_item"
+                   type="text" placeholder="Enter a to-do item"/>
+       </form>
        <table id="id_list_table">
-        
+          {% for item in items %}
+             <tr>
+                <td>{{forloop.counter}}: {{item.text}}</td>
+             </tr>
+         {% endfor %}
        </table>
     </body>
 </html>
