--- a/lists/templates/lists/list.html
+++ b/lists/templates/lists/list.html
@@ -5,7 +5,7 @@
     </head>
     <body>
        <h1>Your To-Do list</h1>
-       <form method="POST" action="/lists/new">
+       <form method="POST" action="/lists/{{list.id}}/add_item">
             {% csrf_token %}
             <input name="item_text" id="id_new_item"
                    type="text" placeholder="Enter a to-do item"/>
