--- a/lists/templates/lists/home.html
+++ b/lists/templates/lists/home.html
@@ -6,9 +6,11 @@
     <body>
        <h1>Start a new To-Do list</h1>
        <form method="POST" action="/lists/new">
+            <p style="text-align: center;">
+                 <input name="item_text" id="id_new_item"
+                        type="text" placeholder="Enter a to-do item"/>
+            </p>
             {% csrf_token %}
-            <input name="item_text" id="id_new_item"
-                   type="text" placeholder="Enter a to-do item"/>
        </form>
     </body>
 </html>
