--- a/lists/templates/lists/home.html
+++ b/lists/templates/lists/home.html
@@ -1,16 +1,4 @@
-<html>
-    <head>
-       <title>To-Do lists</title>
-       <meta charset="utf-8" />
-    </head>
-    <body>
-       <h1>Start a new To-Do list</h1>
-       <form method="POST" action="/lists/new">
-            <p style="text-align: center;">
-                 <input name="item_text" id="id_new_item"
-                        type="text" placeholder="Enter a to-do item"/>
-            </p>
-            {% csrf_token %}
-       </form>
-    </body>
-</html>
+{% extends 'lists/base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock header_text %}
+{% block form_action %}/lists/new{% endblock form_action %}
