--- a/lists/templates/lists/list.html
+++ b/lists/templates/lists/list.html
@@ -1,15 +1,7 @@
-<html>
-    <head>
-       <title>To-Do lists</title>
-       <meta charset="utf-8" />
-    </head>
-    <body>
-       <h1>Your To-Do list</h1>
-       <form method="POST" action="/lists/{{list.id}}/add_item">
-            {% csrf_token %}
-            <input name="item_text" id="id_new_item"
-                   type="text" placeholder="Enter a to-do item"/>
-       </form>
+{% extends 'lists/base.html' %}
+{% block header_text %}Your To-Do list{% endblock header_text %}
+{% block form_action %}/lists/{{list.id}}/add_item{% endblock form_action %}
+{% block table %}
        <table id="id_list_table">
           {% for item in items %}
              <tr>
@@ -17,5 +9,4 @@
              </tr>
          {% endfor %}
        </table>
-    </body>
-</html>
+{% endblock table %}
