--- a/lists/templates/lists/base.html
+++ b/lists/templates/lists/base.html
@@ -1,16 +1,35 @@
+<!DOCTYPE html>
+{% load staticfiles %}
 <html>
-    <head>
-       <title>To-Do lists</title>
-       <meta charset="utf-8" />
-    </head>
-    <body>
-       <h1{% block header_text %}{% endblock header_text %}</h1>
-       <form method="POST" action="{% block form_action %}{% endblock form_action %}">     
-            <input name="item_text" id="id_new_item"
-                   type="text" placeholder="Enter a to-do item" />     
-            {% csrf_token %}
-       </form>
-       {% block table %}
-       {% endblock table %} 
-    </body>
+<head>
+    <title>To-Do lists</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'lists/css/bootstrap.css' %}"
+             rel="stylesheet" media="screen">
+    <link href="{% static 'lists/css/base.css' %}" rel="stylesheet">
+</head>
+<body>
+   <div class="container">
+     <div class="row">
+       <div class="col-md-6 col-md-offset-3 jumbotron">
+          <div class="text-center">
+              <h1>{% block header_text %}{% endblock header_text %}</h1>
+              <form method="POST" action="{% block form_action %}{% endblock form_action %}">     
+                   <input name="item_text" id="id_new_item"
+                          class="form-control input-lg"
+                          type="text" placeholder="Enter a to-do item" />     
+                   {% csrf_token %}
+              </form>
+          </div>
+       </div>
+     </div>  
+     <div class="row"> 
+          <div class="col-md-6 col-md-offset-3">
+                {% block table %}
+                {% endblock table %}
+          </div>
+      </div>  
+   </div> 
+</body>
 </html>
