Use get_absolute_url on List model to DRY urls in views

--- a/lists/templates/lists/list.html
+++ b/lists/templates/lists/list.html
@@ -1,6 +1,6 @@
 {% extends 'lists/base.html' %}
 {% block header_text %}Your To-Do list{% endblock header_text %}
-{% block form_action %}/lists/{{list.id}}/{% endblock form_action %}
+{% block form_action %}{% url 'lists:view_list' list.id %}{% endblock form_action %}
 {% block table %}
        <table id="id_list_table" class="table">
           {% for item in items %}
