--- a/lists/templates/lists/base.html
+++ b/lists/templates/lists/base.html
@@ -33,6 +33,8 @@
                 {% endblock table %}
           </div>
       </div>  
-   </div> 
+   </div>
+   <script src="{% static 'lists/javascript/jquery.js' %}"></script>
+   <script src="{% static 'lists/javascript/list.js' %}"></script>
 </body>
 </html>
